# BoilerPlate

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
src/: main.cpp
